fix spacing on contact page

--- a/public/css/stylesheet-override2.css
+++ b/public/css/stylesheet-override2.css
@@ -1189,7 +1189,7 @@ form .btn-custom,
   font-size: 1.2em;
 }
 .contact-article > div {
-  margin: auto 2rem;
+  margin: auto 1.5rem;
 }
 
 .social-media-list i {
